# invest-thesis-ledger

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: ledger-schema.md
examples/: leveraged-etf-discipline.json  oklo-ai-power-prior.json  oklo-ai-power.json
examples/integration/: README.md  leveraged-etp-risk-lab-summary.json  portfolio-risk-compass-summary.json
examples/output/: action-plan.json  archive-diff.json  archive-diff.md  decision-review-walkthrough.json  decision-review-walkthrough.md  evidence-audit.json  evidence-path-receipt.json  evidence-path-receipt.md  oklo-ai-power-brief.md  oklo-ai-power-broker.json  oklo-ai-power-broker.md  oklo-ai-power-calendar.json  oklo-ai-power-calendar.md  oklo-ai-power-decision-memo.json  oklo-ai-power-decision-review-pack.json  oklo-ai-power-decision-review-pack.md  oklo-ai-power-drift.json  oklo-ai-power-drift.md  oklo-ai-power-evidence.json  oklo-ai-power-evidence.md  oklo-ai-power-exposure.json  oklo-ai-power-exposure.md  oklo-ai-power-history.json  oklo-ai-power-history.md  oklo-ai-power-risk.json  oklo-ai-power-risk.md  oklo-ai-power-scenario-plan.json  package-readiness-receipt.json  package-readiness-receipt.md  portfolio-summary.json  portfolio-summary.md  quickstart-receipt.json  quickstart-receipt.md  review-queue.json  review-queue.md  watchlist.json
invest_thesis_ledger/: __init__.py  __main__.py  cli.py  hygiene.py  render.py  review_walkthrough.py  schema.py
reports/reviews/: 2026-05-16-v1.8.0-internal-review.md
scripts/: selfcheck.py
tests/: test_cli.py
(+38 files in other folders)
