[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "invest-thesis-ledger"
version = "1.1.0"
description = "A zero-dependency CLI for validating and rendering investment thesis ledgers."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "invest-thesis-ledger contributors"}
]
keywords = ["investment", "research", "ledger", "cli", "markdown"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial :: Investment"
]
dependencies = []

[project.scripts]
invest-thesis-ledger = "invest_thesis_ledger.cli:main"

[tool.setuptools]
packages = ["invest_thesis_ledger"]
